Terraform/AWS_Load_Balancer/eks-alb-starter/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: micro-ingress
namespace: microservices
annotations:
kubernetes.io/ingress.class: alb
alb.ingress.kubernetes.io/scheme: internet-facing
alb.ingress.kubernetes.io/target-type: ip
alb.ingress.kubernetes.io/certificate-arn: "${ACM_CERT_ARN}"
alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
ingressClassName: alb
rules:
- host: app.${ROOT_DOMAIN}
http:
paths:
- path: /
pathType: Prefix
backend:
service:
name: app-service
port:
number: 80
- host: api.${ROOT_DOMAIN}
http:
paths:
- path: /
pathType: Prefix
backend:
service:
name: api-service
port:
number: 80
